# math-problems-tutor

./: .dockerignore  .gitignore  Dockerfile.app  Dockerfile.ui  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
.github/ISSUE_TEMPLATE/: feature-definition.md
migrations/: env.py
migrations/versions/: 3ab576ee89a4_change_name_to_unit.py  3d37a7bfde69_add_datetime.py  4e1d908f623b_create_tables.py  5008afc4418e_.py
mpt-app/: main.py
mpt-ui/: package.json
mpt-ui/src/: App.tsx
mpt_app/: db.py  main.py  migrate_db.py
mpt_app/cruds/: chapter.py  problem.py
mpt_app/db/: session.py
mpt_app/models/: __init__.py  chapter.py  combined_models.py  problem.py
mpt_app/models/routers/: problem.py
mpt_app/routers/: chapter.py  problem.py
mpt_app/schemas/: chapter.py  problem.py
mpt_ui/: package.json  tsconfig.json
mpt_ui/components/: Page.css  Page.module.css  Page.tsx
mpt_ui/pages/: index.css  index.module.css  index.tsx
mpt_ui/pages/problems/: [id].tsx  problems.css  problems.module.css
mpt_ui/src/views/: App.css  App.tsx
scripts/: migrate.sh  run_pytest.sh
tests/: test_chapters.py  test_problems.py  test_utils.py
